librocksdb_sys/bindings/aarch64-unknown-linux-gnu-bindings.rs

extern "C" {
    pub fn crocksdb_writebatch_mergev_cf(
        b: *mut crocksdb_writebatch_t,
        column_family: *mut crocksdb_column_family_handle_t,
        num_keys: libc::c_int,
        keys_list: *const *const libc::c_char,
        keys_list_sizes: *const usize,
        num_values: libc::c_int,
        values_list: *const *const libc::c_char,
        values_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_delete(
        arg1: *mut crocksdb_writebatch_t,
        key: *const libc::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_delete_cf(
        arg1: *mut crocksdb_writebatch_t,
        column_family: *mut crocksdb_column_family_handle_t,
        key: *const libc::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_single_delete(
        arg1: *mut crocksdb_writebatch_t,
        key: *const libc::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_single_delete_cf(
        arg1: *mut crocksdb_writebatch_t,
        column_family: *mut crocksdb_column_family_handle_t,
        key: *const libc::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_deletev(
        b: *mut crocksdb_writebatch_t,
        num_keys: libc::c_int,
        keys_list: *const *const libc::c_char,
        keys_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_deletev_cf(
        b: *mut crocksdb_writebatch_t,
        column_family: *mut crocksdb_column_family_handle_t,
        num_keys: libc::c_int,
        keys_list: *const *const libc::c_char,
        keys_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_delete_range(
        b: *mut crocksdb_writebatch_t,
        start_key: *const libc::c_char,
        start_key_len: usize,
        end_key: *const libc::c_char,
        end_key_len: usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_delete_range_cf(
        b: *mut crocksdb_writebatch_t,
        column_family: *mut crocksdb_column_family_handle_t,
        start_key: *const libc::c_char,
        start_key_len: usize,
        end_key: *const libc::c_char,
        end_key_len: usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_delete_rangev(
        b: *mut crocksdb_writebatch_t,
        num_keys: libc::c_int,
        start_keys_list: *const *const libc::c_char,
        start_keys_list_sizes: *const usize,
        end_keys_list: *const *const libc::c_char,
        end_keys_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_delete_rangev_cf(
        b: *mut crocksdb_writebatch_t,
        column_family: *mut crocksdb_column_family_handle_t,
        num_keys: libc::c_int,
        start_keys_list: *const *const libc::c_char,
        start_keys_list_sizes: *const usize,
        end_keys_list: *const *const libc::c_char,
        end_keys_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_put_log_data(
        arg1: *mut crocksdb_writebatch_t,
        blob: *const libc::c_char,
        len: usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_iterate(
        arg1: *mut crocksdb_writebatch_t,
        state: *mut libc::c_void,
        put: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                k: *const libc::c_char,
                klen: usize,
                v: *const libc::c_char,
                vlen: usize,
            ),
        >,
        deleted: ::std::option::Option<
            unsafe extern "C" fn(arg1: *mut libc::c_void, k: *const libc::c_char, klen: usize),
        >,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_data(
        arg1: *mut crocksdb_writebatch_t,
        size: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_writebatch_set_save_point(arg1: *mut crocksdb_writebatch_t);
}
extern "C" {
    pub fn crocksdb_writebatch_pop_save_point(
        arg1: *mut crocksdb_writebatch_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_rollback_to_save_point(
        arg1: *mut crocksdb_writebatch_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_create() -> *mut crocksdb_block_based_table_options_t;
}
extern "C" {
    pub fn crocksdb_block_based_options_destroy(options: *mut crocksdb_block_based_table_options_t);
}
extern "C" {
    pub fn crocksdb_block_based_options_set_metadata_block_size(
        options: *mut crocksdb_block_based_table_options_t,
        block_size: usize,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_block_size(
        options: *mut crocksdb_block_based_table_options_t,
        block_size: usize,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_block_size_deviation(
        options: *mut crocksdb_block_based_table_options_t,
        block_size_deviation: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_block_restart_interval(
        options: *mut crocksdb_block_based_table_options_t,
        block_restart_interval: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_filter_policy(
        options: *mut crocksdb_block_based_table_options_t,
        filter_policy: *mut crocksdb_filterpolicy_t,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_no_block_cache(
        options: *mut crocksdb_block_based_table_options_t,
        no_block_cache: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_block_cache(
        options: *mut crocksdb_block_based_table_options_t,
        block_cache: *mut crocksdb_cache_t,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_block_cache_compressed(
        options: *mut crocksdb_block_based_table_options_t,
        block_cache_compressed: *mut crocksdb_cache_t,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_whole_key_filtering(
        arg1: *mut crocksdb_block_based_table_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_format_version(
        arg1: *mut crocksdb_block_based_table_options_t,
        arg2: libc::c_int,
    );
}
pub const crocksdb_block_based_table_index_type_binary_search: _bindgen_ty_1 = 0;
pub const crocksdb_block_based_table_index_type_hash_search: _bindgen_ty_1 = 1;
pub const crocksdb_block_based_table_index_type_two_level_index_search: _bindgen_ty_1 = 2;
pub type _bindgen_ty_1 = u32;
extern "C" {
    pub fn crocksdb_block_based_options_set_index_type(
        arg1: *mut crocksdb_block_based_table_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_hash_index_allow_collision(
        arg1: *mut crocksdb_block_based_table_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_partition_filters(
        arg1: *mut crocksdb_block_based_table_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_cache_index_and_filter_blocks(
        arg1: *mut crocksdb_block_based_table_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_pin_top_level_index_and_filter(
        arg1: *mut crocksdb_block_based_table_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_cache_index_and_filter_blocks_with_high_priority(
        arg1: *mut crocksdb_block_based_table_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_pin_l0_filter_and_index_blocks_in_cache(
        arg1: *mut crocksdb_block_based_table_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_block_based_options_set_read_amp_bytes_per_bit(
        arg1: *mut crocksdb_block_based_table_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_block_based_table_factory(
        opt: *mut crocksdb_options_t,
        table_options: *mut crocksdb_block_based_table_options_t,
    );
}
extern "C" {
    pub fn crocksdb_options_get_block_cache_usage(opt: *mut crocksdb_options_t) -> usize;
}
extern "C" {
    pub fn crocksdb_options_set_block_cache_capacity(
        opt: *mut crocksdb_options_t,
        capacity: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_options_get_block_cache_capacity(opt: *mut crocksdb_options_t) -> usize;
}
extern "C" {
    pub fn crocksdb_flushjobinfo_cf_name(
        arg1: *const crocksdb_flushjobinfo_t,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_flushjobinfo_file_path(
        arg1: *const crocksdb_flushjobinfo_t,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_flushjobinfo_table_properties(
        arg1: *const crocksdb_flushjobinfo_t,
    ) -> *const crocksdb_table_properties_t;
}
extern "C" {
    pub fn crocksdb_flushjobinfo_triggered_writes_slowdown(
        arg1: *const crocksdb_flushjobinfo_t,
    ) -> libc::c_uchar;
}
extern "C" {
    pub fn crocksdb_flushjobinfo_triggered_writes_stop(
        arg1: *const crocksdb_flushjobinfo_t,
    ) -> libc::c_uchar;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_status(
        info: *const crocksdb_compactionjobinfo_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_cf_name(
        arg1: *const crocksdb_compactionjobinfo_t,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_input_files_count(
        arg1: *const crocksdb_compactionjobinfo_t,
    ) -> usize;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_input_file_at(
        arg1: *const crocksdb_compactionjobinfo_t,
        pos: usize,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_output_files_count(
        arg1: *const crocksdb_compactionjobinfo_t,
    ) -> usize;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_output_file_at(
        arg1: *const crocksdb_compactionjobinfo_t,
        pos: usize,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_table_properties(
        arg1: *const crocksdb_compactionjobinfo_t,
    ) -> *const crocksdb_table_properties_collection_t;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_elapsed_micros(
        arg1: *const crocksdb_compactionjobinfo_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_num_corrupt_keys(
        arg1: *const crocksdb_compactionjobinfo_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_output_level(
        arg1: *const crocksdb_compactionjobinfo_t,
    ) -> libc::c_int;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_input_records(
        arg1: *const crocksdb_compactionjobinfo_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_output_records(
        arg1: *const crocksdb_compactionjobinfo_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_total_input_bytes(
        info: *const crocksdb_compactionjobinfo_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_compactionjobinfo_total_output_bytes(
        info: *const crocksdb_compactionjobinfo_t,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_externalfileingestioninfo_cf_name(
        arg1: *const crocksdb_externalfileingestioninfo_t,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_externalfileingestioninfo_internal_file_path(
        arg1: *const crocksdb_externalfileingestioninfo_t,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
